<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.sonukg.sonu_kumar_practicle_task.viewmodel.LoginActivityViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.MainActivity"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="218dp"
                android:layout_height="39dp"
                android:layout_marginTop="20dp"
                android:text="Login"
                android:textSize="20dp"
                android:background="@color/red"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/email"
                android:layout_width="335dp"
                android:layout_height="58dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:background="@drawable/rounded_editext"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:hint="@string/email"
                android:drawablePadding="5dp"
                android:padding="5dp"
                android:text="hello@yopmail.com"
                android:drawableTint="@color/red"
                android:textColorHint="@color/red"
                android:inputType="textEmailAddress"
                app:addTextChangedListener="@{viewModel.emailTextWatcher}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/password"
                android:layout_width="335dp"
                android:layout_height="58dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/password"
                android:drawablePadding="5dp"
                android:padding="5dp"
                android:text="Password@123"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:background="@drawable/rounded_editext"
                android:drawableTint="@color/red"
                android:textColorHint="@color/red"
                android:inputType="textPassword"
                app:addTextChangedListener="@{viewModel.passwordTextWatcher}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <Button
                android:id="@+id/submit"
                android:layout_width="335dp"
                android:layout_height="58dp"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:onClick="@{viewModel::onLoginClicked}"
                android:backgroundTint="@color/teal_200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
